# bazel-gazelle

./: BUILD.bazel  Makefile  README.md  go.mod  go.sum
cmd/greeter/: BUILD.bazel  main.go
pkg/greet/: BUILD.bazel  greet.go  greet_test.go
