load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "greeter_lib",
    srcs = ["main.go"],
    importpath = "github.com/klahssen/bazel-gazelle/cmd/greeter",
    visibility = ["//visibility:private"],
    deps = ["//pkg/greet"],
)

go_binary(
    name = "greeter",
    embed = [":greeter_lib"],
    visibility = ["//visibility:public"],
)
