load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "greet",
    srcs = ["greet.go"],
    importpath = "github.com/klahssen/bazel-gazelle/pkg/greet",
    visibility = ["//visibility:public"],
)

go_test(
    name = "greet_test",
    srcs = ["greet_test.go"],
    embed = [":greet"],
)
